# resolve-ai-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_search_indexes.py
docs/: architecture.md  evaluation_report.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Auth.jsx  Dashboard.jsx  EvaluationSuite.jsx  TicketDetail.jsx
scripts/: eval_cases.json  run_evaluation.py  seed_data.py
src/resolveai/: main.py
src/resolveai/agent/: graph.py  guardrails.py  tools.py
src/resolveai/api/: endpoints.py
src/resolveai/core/: auth.py  config.py  llm_provider.py  pricing.py
src/resolveai/db/: seed.py  session.py
src/resolveai/models/: __init__.py  models.py
src/resolveai/schemas/: schemas.py
src/resolveai/services/: retrieval.py
src/resolveai/tasks/: __init__.py  tasks.py
tests/: conftest.py
tests/contract/: test_llm_structured_output.py
tests/e2e/: test_ticket_resolution.py
tests/integration/: test_agent_tools.py  test_postgres.py  test_ticket_api.py  test_vector_search.py
tests/unit/: test_classifier.py  test_cost_calculator.py  test_guardrails.py  test_policy_rules.py  test_rrf.py
