[project]
name = "resolveai"
version = "0.1.0"
description = "ResolveAI — Evaluation-Driven Customer Operations Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.3.3",
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.1.19",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.1",
    "redis>=5.0.6",
    "celery>=5.4.0",
    "langgraph>=0.1.4",
    "langchain-core>=0.2.10",
    "langchain-google-genai>=1.0.6",
    "google-generativeai>=0.7.0",
    "langchain-openai>=0.1.13",
    "sentence-transformers>=3.0.1",
    "numpy>=1.26.4",
    "jinja2>=3.1.4",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "prometheus-client>=0.20.0"
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.7",
    "testcontainers[postgres,redis]>=3.7.1",
    "ruff>=0.4.9",
    "pyright>=1.1.368",
    "httpx>=0.27.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short --cov=resolveai --cov-report=term-missing"
testpaths = [
    "tests"
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
# B008: Depends()/Query() in defaults is the idiomatic FastAPI pattern.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Seed data contains long human-readable policy sentences.
"src/resolveai/db/seed.py" = ["E501"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/node_modules", "**/__pycache__"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportGeneralTypeIssues = true

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["resolveai"]

